get active tasks in project api
